--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "csv-parse": "^4.8.2",
     "firebase": "^7.6.0",
     "firebaseui": "^4.3.0",
     "react": "^16.12.0",
