--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "csv-parse": "^4.8.2",
+    "csv-stringify": "^5.3.5",
     "firebase": "^7.6.0",
     "firebaseui": "^4.3.0",
     "react": "^16.12.0",
