--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
+    "react-latex": "^1.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
